--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "XDemangleWidget"]
 	path = XDemangleWidget
 	url = https://github.com/horsicq/XDemangleWidget.git
+[submodule "XLLVMDemangler"]
+	path = XLLVMDemangler
+	url = https://github.com/horsicq/XLLVMDemangler.git
